--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==5.0.0
 bibtexparser==1.4.3
 boto3==1.40.40
 botocore==1.40.40
+botorch==0.15.1
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -16,12 +17,17 @@ cryptography==46.0.1
 cycler==0.12.1
 dnspython==2.8.0
 emmet-core==0.84.10
+filelock==3.19.1
 fonttools==4.60.0
+fsspec==2025.9.0
+gpytorch==1.14
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 invoke==2.2.0
+jaxtyping==0.3.2
+Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.2
 jsonlines==4.0.0
@@ -29,8 +35,10 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 latexcodec==3.0.1
+linear-operator==0.6
 maggma==0.72.0
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 matplotlib==3.10.6
 mdurl==0.1.2
 mongomock==4.3.0
@@ -38,9 +46,12 @@ monty==2025.3.3
 mp-api==0.45.11
 mpmath==1.3.0
 msgpack==1.1.1
+multipledispatch==1.0.0
+mypy_extensions==1.1.0
 narwhals==2.6.0
 networkx==3.5
 numpy==2.3.3
+opt_einsum==3.4.0
 orjson==3.11.3
 packaging==25.0
 palettable==3.3.3
@@ -61,6 +72,9 @@ pymatgen-io-validation==0.1.2
 pymongo==4.10.1
 PyNaCl==1.6.0
 pyparsing==3.2.5
+pyre-extensions==0.0.32
+pyro-api==0.1.2
+pyro-ppl==1.9.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
@@ -73,6 +87,7 @@ rpds-py==0.27.1
 ruamel.yaml==0.18.15
 ruamel.yaml.clib==0.2.14
 s3transfer==0.14.0
+scikit-learn==1.7.2
 scipy==1.16.2
 sentinels==1.1.1
 shellingham==1.5.4
@@ -84,11 +99,15 @@ sshtunnel==0.4.0
 sympy==1.14.0
 tabulate==0.9.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
+torch==2.8.0
 tqdm==4.67.1
 typer==0.19.2
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 uncertainties==3.2.3
 urllib3==2.5.0
+wadler_lindig==0.1.7
 wrapt==1.17.3
